--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -2,24 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.fpuna.activityrecognition" >
 
+    <uses-permission android:name="org.harservice.android.permission.ACTIVITY_RECOGNITION" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <receiver android:name="com.android.fpuna.dummyactivityrecognition.BootReceiver" >
-            <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
-            </intent-filter>
-        </receiver>
-
-        <service
-            android:name="com.android.fpuna.dummyactivityrecognition.ActivityService">
-        </service>
 
         <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
+            android:name="org.harservice.version"
+            android:value="@integer/harlib_version" />
 
         <activity
             android:name=".MainActivity"
@@ -38,6 +31,4 @@
             android:name=".DetectedActivitiesIntentService"
             android:exported="false" />
     </application>
-    <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 </manifest>
