--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
+.idea
+gradle*
 .DS_Store
-/build
-/captures
+build
+captures
+libs/*
